feat: add swagger tags, summary and desscription
